# kadai

./: Cargo.toml
src/: main.rs
