[package]
name = "kadai"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["full"] }
